[tool.poetry]
name = "just-tbp"
version = "0.1.0-alpha"
description = ""
authors = ["dimnissv <dimnissv@yabdex.kz>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/dimnissv/just-tbp"
repository = "https://github.com/dimnissv/just-tbp"
keywords = ["tpb", "piratebay", "api", "torrent", "apibay"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
packages = [{ include = "just_tbp" }]

[tool.poetry.dependencies]
python = ">=3.8"
httpx = "^0.25.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
ruff = "^0.1.0" # For linting and formatting
black = "^23.0" # Optional, if you prefer black for formatting

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"